--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "proxy-sdk",
-  "version": "1.0.6",
+  "name": "residential-proxy-sdk",
+  "version": "1.0.4",
   "description": "ProxySDK là một giải pháp proxy xoay dân cư tiêu chuẩn cho các dự án tại Việt Nam, đặc biệt phù hợp cho các dự án MMO và Airdrop.",
   "main": "dist/index.js",
+  "type": "module",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
@@ -12,12 +13,21 @@
   "keywords": [
     "proxy",
     "sdk",
-    "api"
+    "api",
+    "vietnam",
+    "mmo",
+    "airdrop"
   ],
   "author": "Nathan",
   "license": "MIT",
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "dependencies": {
+    "axios": "^0.21.4"
+  },
   "devDependencies": {
-    "typescript": "^4.0.0",
-    "axios": "^0.21.1"
+    "typescript": "^4.0.0"
   }
 }
